--- a/index.html
+++ b/index.html
@@ -2,43 +2,53 @@
 <html lang="en">
 
 <head>
+<!-- Metadata -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat'>
+    <meta name="viewport" content="=width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-US-Compatible" content="ie=edge">
+
+<!--Title code-->
+    <title>Coding Quiz</title>
+<!--CSS link -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Code Quiz</title>
+
 </head>
+
 <body>
-    <header>
-        <div>
-            <button class="btnHeader" id="view-high-scores">View High Scores</button>
-        </div>
-        <div>
-            <p>Time: <span id="timeLeft">xxx</span></p>
-        </div>
-         
-    </header>
-
-        <div id="mainDiv"> <!-- Container for grid items -->
-            <div id="gridContainer">
-                <p id="questionDisplay">Welcome to our code Quiz!</p>
-                <p id="finalScoreDisplay"></p>
-                <p id="enterInitials"></p>
-                <textarea id=enterInitialsTextArea></textarea>
-                <button class="btn" id="start-quiz">Start Quiz</button>
-                <button class="btn" id="answer1"></button>
-                <button class="btn" id="answer2"></button>
-                <button class="btn" id="answer3"></button>
-                <button class="btn" id="answer4"></button>
-                <button class="btn" id="submitScore"></button> <!-- Grid nows where to put next item.-->
-
+    <!-- Container for content-->
+    <div class="Container">
+        <!-- Container for questions-->
+        <div id="questionsContainer" class='hide'>
+            <!--Question Display-->
+            <div id="questionDisplay">Question</div>
+            <!-- Display time left-->
+            <div> Time Remaining <span id=timeRemaining>02:30</span></div>
+            <!-- Display Score -->
+            <div>Score <span id='scoreDisplay'></span></div>
+            <!-- Answer buttons container-->
+            <div id="answerButtons" class="buttonGrid">
+                <button class='button'>Answer 1</button>
+                <button class='button'>Answer 2</button>
+                <button class='button'>Answer 3</button>
+                <button class='button'>Answer 4</button>
             </div>
-            <div id="answerCorrectWrongGrid"></div>
-            <p id=answerCorrectWrong></p>
-            </div>
+        </div>
 
-    </section>
-    
-    <script src="./assets/js/script.js"></script>
+        <!-- Container for choices -->
+        <div id='choices'>
+            <!-- Start button -->
+            <button id="startButton" class='startButton button'>Start</button>
+            <!--Next Question Button -->
+            <button id="nextButton" class='nextButton button hide'>Next Question</button>
+            <!-- Submit Answer Button -->
+            <button id="submitButton" class='submitButton button hide'>Submit</button>
+        </div>
+    </div>
 </body>
+
+<!-- Js link -->
+<script src="./assets/js/script.js"></script>
+
+</body>
+
 </html>
